<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/biankuang"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="center_horizontal"
        android:text="@string/tishi_choicpic"
        android:textColor="#000000"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:contentDescription="@string/picture_compare"
            android:id="@+id/iv_four_left"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:scaleType="fitXY" />

        <ImageView
            android:contentDescription="@string/picture_compare"
            android:id="@+id/iv_four_right"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:scaleType="fitXY" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_four_left"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/choice_pic1" />

        <Button
            android:id="@+id/bt_four_right"
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/choice_pic2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_four_loadleft"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/check_pic1" />

        <Button
            android:id="@+id/bt_four_loadright"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/choice_pic2" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_four_check"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/fenxi1" />

    <TextView
        android:id="@+id/tv_four_result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="#77000000"
        android:gravity="center_horizontal"
        android:text="@string/title_fenxin"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_four_eye"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="#77000000"
                android:paddingLeft="5dp"
                android:text="@string/fenxin_eye"
                android:textColor="#00ffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_four_eyebrow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#77000000"
                android:paddingLeft="5dp"
                android:text="@string/fenxin_meimao"
                android:textColor="#00ffff"
                android:textSize="18sp" />
        </TableRow>

        <View
            android:layout_height="1dip"
            android:background="#ffffff" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_four_mouth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="#77000000"
                android:paddingLeft="5dp"
                android:text="@string/fenxin_mouth"
                android:textColor="#00ffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_four_nose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#77000000"
                android:paddingLeft="5dp"
                android:text="@string/fenxin_nose"
                android:textColor="#00ffff"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tv_four_simil"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#77000000"
        android:gravity="center_horizontal"
        android:text="@string/fenxin_zhengti"
        android:textColor="#00ffff"
        android:textSize="18sp" />

</LinearLayout>