<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp" >

        <ImageView
            android:contentDescription="@string/backgroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:background="@drawable/back001" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lookface"
            android:textColor="#000"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/obout_us_content_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/rl_oboutus_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/preference_first_item"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:contentDescription="@string/jiantou"
                    android:id="@+id/iv_oboutus_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:clickable="true" />

                <TextView
                    android:id="@+id/tv_about_us_title_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/iv_oboutus_1"
                    android:padding="8dp"
                    android:text="@string/one"
                    android:textColor="#000"
                    android:textSize="14sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_oboutus_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/preference_item"
                android:paddingBottom="8dp"
                android:paddingLeft="25dp"
                android:paddingRight="20dp"
                android:paddingTop="8dp"
                android:text="@string/lookface_info"
                android:textColor="#000"
                android:textSize="14sp"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/rl_oboutus_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/preference_item"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:contentDescription="@string/jiantou"
                    android:id="@+id/iv_oboutus_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:scaleType="matrix" />

                <TextView
                    android:id="@+id/tv_about_us_title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/iv_oboutus_2"
                    android:padding="8dp"
                    android:text="@string/two"
                    android:textColor="#000"
                    android:textSize="14sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_oboutus_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/preference_item"
                android:paddingBottom="8dp"
                android:paddingLeft="25dp"
                android:paddingRight="15dp"
                android:paddingTop="8dp"
                android:text="@string/version"
                android:textColor="#000"
                android:textSize="14sp"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/rl_oboutus_3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:contentDescription="@string/jiantou"
                    android:id="@+id/iv_oboutus_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:scaleType="matrix" />

                <TextView
                    android:id="@+id/tv_about_us_title_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/iv_oboutus_3"
                    android:padding="8dp"
                    android:text="@string/three"
                    android:textColor="#000"
                    android:textSize="14sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_oboutus_3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="25dp"
                android:paddingRight="15dp"
                android:paddingTop="8dp"
                android:text="@string/lianxi"
                android:textColor="#000"
                android:textSize="14sp"
                android:visibility="gone" />
            
        </LinearLayout>
    </LinearLayout>

</ScrollView>