<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_recognition"
    android:padding="16dp"
    tools:context=".RecognitionActivity" >

    <ImageView
        android:id="@+id/iv_main_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:background="@drawable/button_style2"
        android:onClick="choice"
        android:text="@string/choice_picture"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_toLeftOf="@+id/button2"
        android:background="@drawable/button_style2"
        android:onClick="check"
        android:text="@string/recognition_face"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/stop_timer_btn"
        android:onClick="more"
        android:text="@string/check_result"
        android:textColor="#ff0099" />

</RelativeLayout>